// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemRightContent should align where we specify 1`] = `
<div
  className=" ListItemWrapper item__list__item "
>
  <div
    alignItems="flex-start"
    className="ItemAvatar avatar__outer__wrapper"
    onClick={undefined}
  >
    <div
      className="avatar__wrapper empty online "
      onClick={[Function]}
      style={Object {}}
    />
  </div>
  <div
    className="ItemDetail item__details"
    onClick={undefined}
  />
</div>
`;

exports[`List render send padding-bottom if its piled 1`] = `
<div
  alignItems="flex-end"
  className="List item__list "
  pile={true}
/>
`;

exports[`List renders 1`] = `
<div
  className="List item__list "
/>
`;

exports[`List should render ItemRightContent with a title 1`] = `
<div
  className="List item__list "
>
  <div>
    <div
      className=" ListItemWrapper item__list__item "
    >
      <div
        className="ItemDetail item__details"
        onClick={undefined}
      >
        <div
          className="ItemSubTitle sub__title"
        >
          bar
        </div>
      </div>
      <div
        alignItems={undefined}
        className="ItemRightContent content__right"
      >
        <div
          className="ItemTitle title"
          weight={400}
        >
          foo
        </div>
      </div>
    </div>
    <a>
      Im also a list item
    </a>
  </div>
</div>
`;

exports[`List should render listitems and divs 1`] = `
<div
  className="List item__list "
>
  <div>
    <div
      className=" ListItemWrapper item__list__item "
    >
      <div
        className="ItemDetail item__details"
        onClick={undefined}
      >
        <div
          className="ItemTitle title"
          overflow={undefined}
          width={undefined}
        >
          foo
        </div>
        <div
          className="ItemSubTitle sub__title"
        >
          bar
        </div>
      </div>
    </div>
    <a>
      Im also a list item
    </a>
  </div>
</div>
`;

exports[`List should render subTitle 1`] = `
<div
  className="List item__list "
>
  <div
    className=" ListItemWrapper item__list__item "
  >
    <div
      className="ItemDetail item__details"
      onClick={undefined}
    >
      <div
        className="ItemTitle title"
        overflow={undefined}
        width={undefined}
      >
        foo
      </div>
      <div
        className="ItemSubTitle sub__title"
      >
        bar
      </div>
    </div>
  </div>
</div>
`;

exports[`List should render title 1`] = `
<div
  className="List item__list "
>
  <div
    className=" ListItemWrapper item__list__item "
  >
    <div
      className="ItemDetail item__details"
      onClick={undefined}
    >
      <div
        className="ItemTitle title"
        overflow={undefined}
        width={undefined}
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItem renders 1`] = `
<div
  className=" ListItemWrapper item__list__item "
>
  <div
    className="ItemDetail item__details"
    onClick={undefined}
  />
</div>
`;

exports[`ListItem should align items 1`] = `
<div
  className=" ListItemWrapper item__list__item "
>
  <div
    className="ItemDetail item__details"
    onClick={undefined}
  />
</div>
`;

exports[`ListItem should render non-arrays 1`] = `
<div
  className=" ListItemWrapper item__list__item "
>
  <div
    className="ItemDetail item__details"
    onClick={undefined}
  >
    YOLO
  </div>
</div>
`;

exports[`ListItemAvatar should align where we specify 1`] = `
<div
  className=" ListItemWrapper item__list__item "
>
  <div
    alignItems="flex-start"
    className="ItemAvatar avatar__outer__wrapper"
    onClick={undefined}
  >
    <div
      className="avatar__wrapper empty online "
      onClick={[Function]}
      style={Object {}}
    />
  </div>
  <div
    className="ItemDetail item__details"
    onClick={undefined}
  />
</div>
`;
